--- a/app/index.html
+++ b/app/index.html
@@ -11,7 +11,7 @@
     <header class="header">
       <div class="container">
         <h2 class="header-title">
-          Poz<span class="header-title_cyan">nan</span> - city<span class="header-title_cyan">2</span>live          
+          Poz<span class="text_cyan">nan</span> - city<span class="text_cyan">2</span>live          
         </h2>
         <div class="header-social">
           <a href="" class="header-social_link">
@@ -49,15 +49,53 @@
         </ul>
       </div>
     </header>
-    <div class="main">
+    <div class="main clearfix">
+      <div class="main-title">
+        Visit Poz<span class="text_cyan">nan</span> 
+      </div>
+      <div class="main-info">
+        A city on the <span class="text_cyan">Warta</span> river in west-central <span class="text_cyan">Poland</span>, the region called <span class="text_cyan">Greater Poland.</span>
+      </div>
+        <ul class="main-person">
+          <li class="main-person_item">
+            <img src="img/person01.png" alt="" class="main-person_img">
+            <p class="main-person_quote main-person_quote-first">
+              I was in Poznan once. The architecture <br>is really awesome.
+            </p>
+            <p class="main-person_name">Joe Wisdom, architect</p>
+          </li>
+          <li class="main-person_item">
+            <img src="img/person02.png" alt="" class="main-person_img">
+            <p class="main-person_quote">
+              I was lost in Poznan for 3 days. <br>I was terrified.
+            </p>
+            <p class="main-person_name">Little Box, child</p>
+          </li>
+          <li class="main-person_item">
+            <img src="img/person03.png" alt="" class="main-person_img">
+            <p class="main-person_quote">
+              People used to look at me now they don’t see me.
+            </p>
+            <p class="main-person_name">Eva Doe, exmodel</p>
+          </li>
+          <li class="main-person_item">
+            <img src="img/person04.png" alt="" class="main-person_img">
+            <p class="main-person_quote main-person_quote-last">
+              I have a lot of penfriends in Poznań. I like <br>writting to them and ...
+            </p>
+            <p class="main-person_name">Emma Smith, child</p>
+          </li>
+        </ul>            
+    </div>
+    <div class="content">
       <div class="container">
-        <div class="main-title">
-          
+        <div class="content-author">
+          <h2 class="content-author_header">ABOUT AUTHOR</h2>
+          <p class="content-author_info">
+            <span class="content-author_info-name">John Doe</span> - lacus vel augue laoreet rutrum faucibus dolor auctor. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Vestibulum id ligula porta.
+          </p>
         </div>
-        <div class="main-info">
-          
-        </div>
-        .main-quotes
+        .content-come
       </div>
     </div>
   </body>
