--- a/app/index.html
+++ b/app/index.html
@@ -88,14 +88,79 @@
         </ul>            
     </div>
     <div class="content">
-      <div class="container">
-        <div class="content-author">
-          <h2 class="content-author_header">ABOUT AUTHOR</h2>
+      <div class="container clearfix">
+        <div class="content-author clearfix">
+          <h2 class="content-header">ABOUT AUTHOR</h2>
           <p class="content-author_info">
             <span class="content-author_info-name">John Doe</span> - lacus vel augue laoreet rutrum faucibus dolor auctor. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Vestibulum id ligula porta.
           </p>
         </div>
-        .content-come
+        <div class="content-welcome clearfix">
+          <h2 class="content-welcome_header">WHY SHOULD YOU COME TO POZNAN</h2>
+          <div class="content-welcome_avatar">
+          11 Nov<br>2013
+        </div>
+          <div class="content-welcome_avatar
+          content-welcome_avatar-img">
+          by <br> John Doe
+        </div>
+          <p class="content-welcome_info">
+            Donec sed odio dui. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio  em nec elit. Sed posuere 
+            consectetur est at lobortis. Nulla vitae elit libero, a pharetra augue. Donec  ullamcorper nulla non metus auctor fringilla. 
+            Nulla vitae elit libero, a pharetra augue. Donec  ullamcorper nulla non metus auctor fringilla... 
+          </p>
+          <a href="" class="content-welcome_btn">read more</a>                  
+          <div class="content-welcome_stat clearfix">
+            <img src="img/up.png" alt="" class="content-welcome_stat-up">
+            <p class="content-welcome_stat-info">10 likes</p>
+            <img src="img/speech.png" alt="" class="content-welcome_stat-speech">
+            <p class="content-welcome_stat-info content-welcome_stat-info__last">22 comments</p>
+            <img src="img/triangle.png" alt="" class="content-welcome_stat-triangle">
+          </div>
+        </div>
+        <div class="content-posts">
+          <h2 class="content-header">RELATED POSTS</h2>
+          <div class="content-posts_item">
+            <img src="img/post-1.png" alt="" class="content-posts_img-big">
+            <h3 class="content-posts_name">POZNAN AT NIGHT</h3>
+            <img src="img/speech_grey.png" alt="" class="content-posts_img-small">
+            <p class="content-posts_comments">10 Comments</p>
+          </div>
+          <div class="content-posts_item">
+            <img src="img/post-2.png" alt="" class="content-posts_img-big">
+            <h3 class="content-posts_name">PEOPLE TO MEET</h3>
+            <img src="img/speech_grey.png" alt="" class="content-posts_img-small">
+            <p class="content-posts_comments">21 Comments</p>
+          </div>
+          <div class="content-posts_item content-posts_item-last">
+            <img src="img/post-3.png" alt="" class="content-posts_img-big">
+            <h3 class="content-posts_name">VISIT OUR OFFICE</h3>
+            <img src="img/speech_grey.png" alt="" class="content-posts_img-small">
+            <p class="content-posts_comments">17 Comments</p>
+          </div>
+        </div>
+        <div class="content-news">
+          <div class="content-news_item">
+            <h2 class="content-header">NEW ATTRACTIONS</h2>
+            <p class="content-news_author">
+              Posted by <a href="" class="content-news_link">John Doe</a>  on <a href="" class="content-news_link">10 Nov 2013</a>
+            </p>
+            <p class="content-news_text">
+              Donec sed odio dui. Duis mollis, est non commodo luctus, 
+              nisi erat porttitor ligula, eget lacinia odio sem nec elit. <br> 
+              Sed posuere consectetur est at lobortis.
+            </p>
+            <a href="" class="content-news_link">more...</a>
+            <div class="content-news_stats"></div>
+          </div>
+          <div class="content-news_item">
+            <h2 class="content-header"></h2>
+            <p class="content-news_author"></p>
+            <p class="content-news_text"></p>
+            <a href="" class="content-news_link"></a>
+            <div class="content-news_stats"></div>
+          </div>
+        </div>
       </div>
     </div>
   </body>
