--- a/app/index.html
+++ b/app/index.html
@@ -6,6 +6,7 @@
     <title>Hello</title>
     <link rel="stylesheet" href="/css/main.css">
     <link rel="stylesheet" href="/fonts/fonts.css">
+    <link rel="stylesheet" href="/css/shadow.css">
   </head>
   <body>
     <header class="header">
@@ -139,29 +140,87 @@
             <p class="content-posts_comments">17 Comments</p>
           </div>
         </div>
-        <div class="content-news">
+        <div class="content-news clearfix">
           <div class="content-news_item">
-            <h2 class="content-header">NEW ATTRACTIONS</h2>
-            <p class="content-news_author">
-              Posted by <a href="" class="content-news_link">John Doe</a>  on <a href="" class="content-news_link">10 Nov 2013</a>
-            </p>
-            <p class="content-news_text">
-              Donec sed odio dui. Duis mollis, est non commodo luctus, 
-              nisi erat porttitor ligula, eget lacinia odio sem nec elit. <br> 
-              Sed posuere consectetur est at lobortis.
-            </p>
-            <a href="" class="content-news_link">more...</a>
-            <div class="content-news_stats"></div>
+            <div class="content-news_item-wrap">
+              <h2 class="content-header">NEW ATTRACTIONS</h2>
+              <p class="content-news_author">
+                Posted by <a href="" class="content-news_link">John Doe</a>  on <a href="" class="content-news_link">10 Nov 2013</a>
+              </p>
+              <p class="content-news_text">
+                Donec sed odio dui. Duis mollis, est non commodo luctus, 
+                nisi erat porttitor ligula, eget lacinia odio sem nec elit. <br> 
+                Sed posuere consectetur est at lobortis.
+              </p>
+              <a href="" class="content-news_link">more...</a>
+            </div>            
+            <div class="content-news_stats clearfix">
+              <img src="img/up_blue.png" alt="" class="content-news_stats-img">
+              <p class="content-news_stats-info">12</p>
+              <img src="img/speech_blue.png" alt="" class="content-news_stats-img">
+              <p class="content-news_stats-info">34</p>
+            </div>
           </div>
-          <div class="content-news_item">
-            <h2 class="content-header"></h2>
-            <p class="content-news_author"></p>
-            <p class="content-news_text"></p>
-            <a href="" class="content-news_link"></a>
-            <div class="content-news_stats"></div>
-          </div>
+          <div class="content-news_item content-news_item-last">
+            <div class="content-news_item-wrap content-news_item-wrap_last">
+              <h2 class="content-header">
+                LET’S MEET ON OLD MARKET SQUARE
+              IT WILL BE FUN
+              </h2>
+              <p class="content-news_author content-news_author-last">
+                Posted by <a href="" class="content-news_link">John Doe</a>  on <a href="" class="content-news_link">09 Nov 2013</a>
+              </p>
+              <p class="content-news_text content-news_text-last">
+                Donec sed odio dui. Duis mollis, est non commodo luctus, <br> 
+                nisi erat porttitor ligula, eget lacinia odio sem nec elit. <br> 
+                Sed posuere consectetur est at lobortis. Eget lacinia odio sem nec elit. 
+                Sed posuere consectetur est at lobortis.eget lacinia...
+              </p>
+              <a href="" class="content-news_link">more...</a>
+            </div>            
+            <div class="content-news_stats clearfix">
+              <img src="img/up_blue.png" alt="" class="content-news_stats-img">
+              <p class="content-news_stats-info">56</p>
+              <img src="img/speech_blue.png" alt="" class="content-news_stats-img">
+              <p class="content-news_stats-info">55</p>
+            </div>
+          </div> 
+          <div class="content-news_add">
+            <a href="" class="content-news_add-text">
+              your add here
+            </a>
+          </div>        
+        </div>
+        <div class="content-currency">
+          <h2 class="content-header">Currency</h2>
+          <table class="content-currency_table">           
+            <tr class="content-currency_table-r">
+              <th class="content-currency_table-h"></th>
+              <th class="content-currency_table-h"></th>
+              <th class="content-currency_table-h"></th>
+              <th class="content-currency_table-h"></th>
+            </tr> 
+            <tr class="content-currency_table-r">
+              <td class="content-currency_table-d"></td>
+              <td class="content-currency_table-d"></td>
+              <td class="content-currency_table-d"></td>
+              <td class="content-currency_table-d"></td>
+            </tr>
+            <tr class="content-currency_table-r">
+              <td class="content-currency_table-d"></td>
+              <td class="content-currency_table-d"></td>
+              <td class="content-currency_table-d"></td>
+              <td class="content-currency_table-d"></td>
+            </tr>
+            <tr class="content-currency_table-r">
+              <td class="content-currency_table-d"></td>
+              <td class="content-currency_table-d"></td>
+              <td class="content-currency_table-d"></td>
+              <td class="content-currency_table-d"></td>
+            </tr>
+          </table>
         </div>
       </div>
-    </div>
+    </div>    
   </body>
 </html>
