--- a/app/index.html
+++ b/app/index.html
@@ -141,26 +141,26 @@
           </div>
         </div>
         <div class="content-news clearfix">
-          <div class="content-news_item">
-            <div class="content-news_item-wrap">
-              <h2 class="content-header">NEW ATTRACTIONS</h2>
-              <p class="content-news_author">
-                Posted by <a href="" class="content-news_link">John Doe</a>  on <a href="" class="content-news_link">10 Nov 2013</a>
-              </p>
-              <p class="content-news_text">
-                Donec sed odio dui. Duis mollis, est non commodo luctus, 
-                nisi erat porttitor ligula, eget lacinia odio sem nec elit. <br> 
-                Sed posuere consectetur est at lobortis.
-              </p>
-              <a href="" class="content-news_link">more...</a>
-            </div>            
-            <div class="content-news_stats clearfix">
-              <img src="img/up_blue.png" alt="" class="content-news_stats-img">
-              <p class="content-news_stats-info">12</p>
-              <img src="img/speech_blue.png" alt="" class="content-news_stats-img">
-              <p class="content-news_stats-info">34</p>
-            </div>
-          </div>
+            <div class="content-news_item">
+              <div class="content-news_item-wrap">
+                <h2 class="content-header">NEW ATTRACTIONS</h2>
+                <p class="content-news_author">
+                  Posted by <a href="" class="content-news_link">John Doe</a>  on <a href="" class="content-news_link">10 Nov 2013</a>
+                </p>
+                <p class="content-news_text">
+                  Donec sed odio dui. Duis mollis, est non commodo luctus, 
+                  nisi erat porttitor ligula, eget lacinia odio sem nec elit. <br> 
+                  Sed posuere consectetur est at lobortis.
+                </p>
+                <a href="" class="content-news_link">more...</a>
+              </div>            
+              <div class="content-news_stats clearfix">
+                <img src="img/up_blue.png" alt="" class="content-news_stats-img">
+                <p class="content-news_stats-info">12</p>
+                <img src="img/speech_blue.png" alt="" class="content-news_stats-img">
+                <p class="content-news_stats-info">34</p>
+              </div>
+            </div>          
           <div class="content-news_item content-news_item-last">
             <div class="content-news_item-wrap content-news_item-wrap_last">
               <h2 class="content-header">
@@ -184,43 +184,83 @@
               <img src="img/speech_blue.png" alt="" class="content-news_stats-img">
               <p class="content-news_stats-info">55</p>
             </div>
+          </div>
+          <div class="content-news_item clearfix">
+            <div class="content-news_add">
+                 <a href="" class="content-news_add-text">
+                            your add here
+                  </a>           
+            </div>
           </div> 
-          <div class="content-news_add">
-            <a href="" class="content-news_add-text">
-              your add here
-            </a>
-          </div>        
+          
+                
         </div>
         <div class="content-currency">
           <h2 class="content-header">Currency</h2>
-          <table class="content-currency_table">           
+          <table class="content-currency_table">      
             <tr class="content-currency_table-r">
-              <th class="content-currency_table-h"></th>
-              <th class="content-currency_table-h"></th>
-              <th class="content-currency_table-h"></th>
-              <th class="content-currency_table-h"></th>
+              <th class="content-currency_table-h">Date</th>
+              <th class="content-currency_table-h">Value</th>
+              <th class="content-currency_table-h">Status</th>
+              <th class="content-currency_table-h">Diff</th>
             </tr> 
             <tr class="content-currency_table-r">
-              <td class="content-currency_table-d"></td>
-              <td class="content-currency_table-d"></td>
-              <td class="content-currency_table-d"></td>
-              <td class="content-currency_table-d"></td>
+              <td class="content-currency_table-d">22.1</td>
+              <td class="content-currency_table-d">459.5</td>
+              <td class="content-currency_table-d">
+                <img src="img/arrow-up.png" alt="" class="content-currency_table-img_up">
+              </td>
+              <td class="content-currency_table-d">+1.0</td>
             </tr>
             <tr class="content-currency_table-r">
-              <td class="content-currency_table-d"></td>
-              <td class="content-currency_table-d"></td>
-              <td class="content-currency_table-d"></td>
-              <td class="content-currency_table-d"></td>
+              <td class="content-currency_table-d content-currency_table-blue">21.1</td>
+              <td class="content-currency_table-d content-currency_table-blue">448.5</td>
+              <td class="content-currency_table-d content-currency_table-blue">
+                <img src="img/arrow-down.png" alt="" class="content-currency_table-img_down">
+              </td>
+              <td class="content-currency_table-d">-2.3</td>
             </tr>
             <tr class="content-currency_table-r">
-              <td class="content-currency_table-d"></td>
-              <td class="content-currency_table-d"></td>
-              <td class="content-currency_table-d"></td>
-              <td class="content-currency_table-d"></td>
+              <td class="content-currency_table-d">20.1</td>
+              <td class="content-currency_table-d">450.8</td>
+              <td class="content-currency_table-d">
+                <img src="img/arrow-up.png" alt="" class="content-currency_table-img_up">
+              </td>
+              <td class="content-currency_table-d">+8.0</td>
             </tr>
           </table>
         </div>
       </div>
-    </div>    
+    </div>
+    <div class="map">
+      <h2 class="map-title">WHERE CAN I FIND MORE INFORMATION</h2>
+      <iframe class="map-api" src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d4281654.178794788!2d33.26283569356921!3d48.685293754692566!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sru!2sua!4v1517772589058" width="100%" height="200" frameborder="0" style="border:0" allowfullscreen></iframe>
+    </div> 
+    <footer class="footer">
+      <div class="container">
+        <div class="footer-main clearfix">
+          <h2 class="footer-title">
+            Poz<span class="text_cyan">nan</span> - city<span class="text_cyan">2</span>live          
+          </h2>
+          <ul class="footer-nav">
+            <li class="footer-nav_item">
+              <a href="" class="footer-nav_link">Home</a>
+            </li>
+            <li class="footer-nav_item">
+              <a href="" class="footer-nav_link">Product</a>
+            </li>
+            <li class="footer-nav_item">
+              <a href="" class="footer-nav_link">Services</a>
+           </li>
+            <li class="footer-nav_item">
+              <a href="" class="footer-nav_link">Contact</a>
+            </li>
+          </ul>
+        </div> 
+        <div class="footer-copyright">
+          all rights reserved 2013 
+        </div>
+      </div>
+    </footer>     
   </body>
 </html>
