--- a/app/index.html
+++ b/app/index.html
@@ -3,9 +3,10 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1.0, width=device-width">
-    <title>Hello</title>
-    <link rel="stylesheet" href="/css/main.css">
+    <title>Poznan</title>
     <link rel="stylesheet" href="/fonts/fonts.css">
+    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="/css/responsive.css">    
     <link rel="stylesheet" href="/css/shadow.css">
   </head>
   <body>
@@ -79,7 +80,7 @@
             </p>
             <p class="main-person_name">Eva Doe, exmodel</p>
           </li>
-          <li class="main-person_item">
+          <li class="main-person_item main-person_item-last">
             <img src="img/person04.png" alt="" class="main-person_img">
             <p class="main-person_quote main-person_quote-last">
               I have a lot of penfriends in Poznań. I like <br>writting to them and ...
@@ -152,7 +153,7 @@
                   nisi erat porttitor ligula, eget lacinia odio sem nec elit. <br> 
                   Sed posuere consectetur est at lobortis.
                 </p>
-                <a href="" class="content-news_link">more...</a>
+                <a href="" class="content-news_link content-news_link-last">more...</a>
               </div>            
               <div class="content-news_stats clearfix">
                 <img src="img/up_blue.png" alt="" class="content-news_stats-img">
@@ -176,7 +177,7 @@
                 Sed posuere consectetur est at lobortis. Eget lacinia odio sem nec elit. 
                 Sed posuere consectetur est at lobortis.eget lacinia...
               </p>
-              <a href="" class="content-news_link">more...</a>
+              <a href="" class="content-news_link content-news_link-last">more...</a>
             </div>            
             <div class="content-news_stats clearfix">
               <img src="img/up_blue.png" alt="" class="content-news_stats-img">
@@ -191,9 +192,7 @@
                             your add here
                   </a>           
             </div>
-          </div> 
-          
-                
+          </div>                 
         </div>
         <div class="content-currency">
           <h2 class="content-header">Currency</h2>
